--- a/index.html
+++ b/index.html
@@ -42,11 +42,22 @@ button {
 h1,h2 { margin:10px 0; }
 input[type=text] { padding:8px; width:80%; border-radius:8px; border:1px solid #555; margin:5px 0; background:#2c2c2c; color:#fff; text-align:center; }
 ul { list-style:none; padding:0; margin-top:10px; text-align:left; font-weight:bold; }
-li { margin:5px 0; padding:6px; border-radius:8px; display:flex; justify-content:space-between; }
+li { margin:5px 0; padding:6px; border-radius:8px; display:flex; justify-content:space-between; align-items:center; }
 #teamList li { background:#a8e6a1; color:black; }
 #waitingList li { background:#ffe0e0; color:black; }
 #blueList li { background:rgba(25,118,210,0.7); color:black; }
 #yellowList li { background:rgba(251,192,42,0.7); color:black; }
+
+.action-btn {
+  margin-left:6px;
+  border:none;
+  border-radius:5px;
+  padding:4px 8px;
+  cursor:pointer;
+  font-weight:bold;
+}
+.edit-btn { background:#4caf50; color:#fff; }
+.delete-btn { background:#e53935; color:#fff; }
 
 #chatBox { max-height:300px; overflow-y:auto; background:#2c2c2c; padding:10px; border-radius:8px; margin-bottom:10px; text-align:left; }
 .player-marker { width:35px; height:35px; border-radius:50%; color:#fff; display:flex; align-items:center; justify-content:center; font-size:14px; font-weight:bold; position:absolute; cursor:grab; user-select:none; }
@@ -136,8 +147,16 @@ async function loadPlayers(){
   const waitingList = document.getElementById("waitingList");
   teamList.innerHTML="";
   waitingList.innerHTML="";
-  if(team) team.forEach((p,i)=>teamList.innerHTML+=`<li>${i+1}. ${p.name}</li>`);
-  if(waiting) waiting.forEach((p,i)=>waitingList.innerHTML+=`<li>${i+1}. ${p.name}</li>`);
+  if(team) team.forEach((p,i)=>teamList.innerHTML+=`<li>${i+1}. ${p.name}
+    <span>
+      <button class="action-btn edit-btn" onclick="editPlayer('main_team',${p.id},'${p.name}')">✏️</button>
+      <button class="action-btn delete-btn" onclick="deletePlayer('main_team',${p.id})">🗑️</button>
+    </span></li>`);
+  if(waiting) waiting.forEach((p,i)=>waitingList.innerHTML+=`<li>${i+1}. ${p.name}
+    <span>
+      <button class="action-btn edit-btn" onclick="editPlayer('waiting_list',${p.id},'${p.name}')">✏️</button>
+      <button class="action-btn delete-btn" onclick="deletePlayer('waiting_list',${p.id})">🗑️</button>
+    </span></li>`);
 }
 
 // Blue/Yellow teams
@@ -152,7 +171,11 @@ async function loadBlue(){
   const { data } = await supabase.from("blue_team").select("*").order("id");
   const ul = document.getElementById("blueList");
   ul.innerHTML="";
-  if(data) data.forEach((p,i)=>ul.innerHTML+=`<li>${i+1}. ${p.name}</li>`);
+  if(data) data.forEach((p,i)=>ul.innerHTML+=`<li>${i+1}. ${p.name}
+    <span>
+      <button class="action-btn edit-btn" onclick="editPlayer('blue_team',${p.id},'${p.name}')">✏️</button>
+      <button class="action-btn delete-btn" onclick="deletePlayer('blue_team',${p.id})">🗑️</button>
+    </span></li>`);
 }
 
 async function addYellow(){
@@ -166,7 +189,29 @@ async function loadYellow(){
   const { data } = await supabase.from("yellow_team").select("*").order("id");
   const ul = document.getElementById("yellowList");
   ul.innerHTML="";
-  if(data) data.forEach((p,i)=>ul.innerHTML+=`<li>${i+1}. ${p.name}</li>`);
+  if(data) data.forEach((p,i)=>ul.innerHTML+=`<li>${i+1}. ${p.name}
+    <span>
+      <button class="action-btn edit-btn" onclick="editPlayer('yellow_team',${p.id},'${p.name}')">✏️</button>
+      <button class="action-btn delete-btn" onclick="deletePlayer('yellow_team',${p.id})">🗑️</button>
+    </span></li>`);
+}
+
+// Edit & Delete
+async function deletePlayer(table,id){
+  if(!confirm("Are you sure you want to delete this player?")) return;
+  await supabase.from(table).delete().eq("id",id);
+  reloadList(table);
+}
+async function editPlayer(table,id,oldName){
+  const newName = prompt("Edit name:", oldName);
+  if(!newName || newName.trim()==="") return;
+  await supabase.from(table).update({name:newName.trim()}).eq("id",id);
+  reloadList(table);
+}
+function reloadList(table){
+  if(table==="main_team" || table==="waiting_list") loadPlayers();
+  else if(table==="blue_team") loadBlue();
+  else if(table==="yellow_team") loadYellow();
 }
 
 // Chat
