--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ li { margin:5px 0; padding:6px; border-radius:8px; display:flex; justify-content
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script>
 const supabaseUrl = "https://wihhlvgkjglphjzhivdn.supabase.co";
-const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6IndpaGhsdmdramdscGhqemhpdmRuIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjI5NDMwOTYsImV4cCI6MjA3ODUxOTA5Nn0.0uG2yhtSzNiGfn3f1ZjB0p33lMh75Et28aMgMGznWlQ";
+const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6IndpaGhsdmdramdscGhqemRuIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjI5NDMwOTYsImV4cCI6MjA3ODUxOTA5Nn0.0uG2yhtSzNiGfn3f1ZjB0p33lMh75Et28aMgMGznWlQ";
 const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
 
 let chatEnabled=false;
@@ -182,10 +182,16 @@ async function refillMainTeam(){
   loadPlayers();
 }
 
-// Blue/Yellow teams
+// Blue/Yellow teams (limit 12)
 async function addBlue(){
   const name = document.getElementById("blueInput").value.trim();
   if(!name) return;
+
+  const { data: team } = await supabase.from("blue_team").select("id");
+  if(team.length >= 12){
+    return alert("Blue team is full (12 players max).");
+  }
+
   await supabase.from("blue_team").insert([{name,time:Date.now()}]);
   document.getElementById("blueInput").value="";
   loadBlue();
@@ -204,6 +210,12 @@ async function loadBlue(){
 async function addYellow(){
   const name = document.getElementById("yellowInput").value.trim();
   if(!name) return;
+
+  const { data: team } = await supabase.from("yellow_team").select("id");
+  if(team.length >= 12){
+    return alert("Yellow team is full (12 players max).");
+  }
+
   await supabase.from("yellow_team").insert([{name,time:Date.now()}]);
   document.getElementById("yellowInput").value="";
   loadYellow();
